# typed_graph

./: .gitignore  .hgignore  .hgtags  Cargo.toml  README.md  build_py.bat  build_py.sh
benches/: main.rs
examples/: json_graph.rs  static_graph.rs
src/: either.rs  lib.rs  typed_error.rs
src/generic_graph/: generic_graph.rs  generic_weight.rs  mod.rs
src/graph/: edge_ref.rs  graph_traits.rs  graph_walker.rs  metadata.rs  mod.rs  typed_graph.rs
src/graph/migration/: either.rs  inbetween.rs  migrate.rs  migration_handler.rs  mod.rs
src/test/: mod.rs  rust_test.py  test_dummy.rs  test_graph.rs  test_py.rs
typed_graph_py/: .hgignore  README.md  output.json  output2.json  pyproject.toml  requirements.txt  setup.cfg  setup.py
typed_graph_py/examples/: generic_graph.py  json_graph.py  static_graph.py
typed_graph_py/typed_graph/: __init__.py  dependency_traits.py  generic_graph.py  typed_graph.py  typed_traits.py
