[package]
name = "typed_graph"
version = "0.1.3"
edition = "2021"
authors = ["lcabyg"]
description = "Staticly typed graph library"
readme = "README.md"
repository = "https://github.com/build-aau/typed_graph"
license = "Apache-2.0"
keywords = [
    "graph", 
    "type"
]
categories = [
    "data-structures"
]

[dependencies]
thiserror = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
slotmap = { version = "^1.0", features = ["serde"] }
indexmap = { version = "^2.0", features = ["serde"] }

[[bench]]
name = "main"
harness = false

[dev-dependencies]
serde_json = "^1.0.108"
fake = { version = "^2.9", features = ["derive"] }
rand = "^0.8.5"
pyo3 = { version = "^0.20.0", features = ["auto-initialize"] }
criterion = "^0.5.1"